--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/assets/favicon.17e50649.svg" />
+    <link rel="icon" type="image/svg+xml" href="/project_web3.0/assets/favicon.17e50649.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Krypt</title>
-    <script type="module" crossorigin src="/assets/index.c25125e9.js"></script>
-    <link rel="modulepreload" href="/assets/vendor.fb2fd071.js">
-    <link rel="stylesheet" href="/assets/index.b79bb19c.css">
+    <script type="module" crossorigin src="/project_web3.0/assets/index.c25125e9.js"></script>
+    <link rel="modulepreload" href="/project_web3.0/assets/vendor.fb2fd071.js">
+    <link rel="stylesheet" href="/project_web3.0/assets/index.b79bb19c.css">
   </head>
   <body>
     <div id="root"></div>
